assets/scss/helpers/_utils.scss
@mixin breakpoint-md {
  @media (max-width: $breakpoint-md) {
    @content;
  }
}

@mixin hover-color($hover-color, $time: $duration) {
  transition-duration: $time;

  &:hover {
    color: $hover-color;
  }
}

.container {
  max-width: 1320px;
  margin: 0 auto;
  padding-left: 12px;
  padding-right: 12px;

  @include breakpoint-md {
    width: 100%;
  }
}

// grid

.row {
  display: flex;
  flex-wrap: wrap;
  margin-left: -12px;
  margin-right: -12px;

  &-md {
    @include breakpoint-md {
      margin-left: -8px;
      margin-right: -8px;
    }
  }
}
.col-1 {
  width: calc(100% / 12);
  padding-left: 12px;
  padding-right: 12px;
}
.col-2 {
  width: calc(100% / 12 * 2);
  padding-left: 12px;
  padding-right: 12px;
}
.col-3 {
  width: calc(100% / 12 * 3);
  padding-left: 12px;
  padding-right: 12px;
}
.col-4 {
  width: calc(100% / 12 * 4);
  padding-left: 12px;
  padding-right: 12px;
}
.col-6 {
  width: calc(100% / 12 * 6);
  padding-left: 12px;
  padding-right: 12px;
}
.col-8 {
  width: calc(100% / 12 * 8);
  padding-left: 12px;
  padding-right: 12px;
}
.col-10 {
  width: calc(100% / 12 * 10);
  padding-left: 12px;
  padding-right: 12px;
}
.col {
  width: 100%;
  padding-left: 12px;
  padding-right: 12px;
}

@include breakpoint-md {
  .col-md-2 {
    width: calc(100% / 4 * 2);
    padding-left: 8px;
    padding-right: 8px;
  }

  .col-md-4 {
    width: 100%;
    padding-left: 8px;
    padding-right: 8px;
  }
}

.d-flex {
  display: flex;
}
.flex-wrap {
  flex-wrap: wrap;
}
.row-gap-8 {
  row-gap: 8px;
}
.column-gap-8 {
  column-gap: 8px;
}
.gap-md-0 {
  @include breakpoint-md {
    gap: 0px;
  }
}

.w-33 {
  width: calc(100% / 3);
}
.w-50 {
  width: 50%;
}
.w-md-auto {
  @include breakpoint-md {
    width: auto;
  }
}

.d-none {
  display: none;
}
.d-inline-block {
  display: inline-block;
}
.d-md-none {
  @include breakpoint-md {
    display: none;
  }
}
.d-md-flex {
  @include breakpoint-md {
    display: flex;
  }
}
.d-md-inline-block {
  @include breakpoint-md {
    display: inline-block;
  }
}
.flex-md-nowrap {
  @include breakpoint-md {
    flex-wrap: nowrap;
  }
}
.flex-md-column {
  @include breakpoint-md {
    flex-direction: column;
  }
}
.flex-md-1 {
  flex: 1;
}
.overflow-x-md-auto {
  @include breakpoint-md {
    overflow-x: auto;
  }
}

.justify-content-center {
  justify-content: center;
}
.justify-content-between {
  justify-content: space-between;
}
.align-items-center {
  align-items: center;
}
.flex-column {
  flex-direction: column;
}

// spacing

.mb-4 {
  margin-bottom: 4px;
}
.mb-12 {
  margin-bottom: 12px;
}
.mb-16 {
  margin-bottom: 16px;
}
.mb-24 {
  margin-bottom: 24px;
}
.mb-32 {
  margin-bottom: 32px;
}
.mb-40 {
  margin-bottom: 40px;
}
.mb-48 {
  margin-bottom: 48px;
}
.me-12 {
  margin-right: 12px;
}
.me-24 {
  margin-right: 24px;
}
.me-40 {
  margin-right: 40px;
}
.me-48 {
  margin-right: 48px;
}
.me-auto {
  margin-right: auto;
}

.pb-48 {
  padding-bottom: 48px;
}
.px-24 {
  padding-left: 24px;
  padding-right: 24px;
}
.py-8 {
  padding-top: 8px;
  padding-bottom: 8px;
}
.py-12 {
  padding-top: 12px;
  padding-bottom: 12px;
}
.py-16 {
  padding-top: 16px;
  padding-bottom: 16px;
}
.py-24 {
  padding-top: 24px;
  padding-bottom: 24px;
}
.py-32 {
  padding-top: 32px;
  padding-bottom: 32px;
}
.py-48 {
  padding-top: 48px;
  padding-bottom: 48px;
}
.py-64 {
  padding-top: 64px;
  padding-bottom: 64px;
}
.p-8 {
  padding: 8px;
}
@include breakpoint-md {
  .mt-md-8 {
    margin-top: 8px;
  }
  .mb-md-0 {
    margin-bottom: 0;
  }
  .mb-md-4 {
    margin-bottom: 4px;
  }
  .mb-md-8 {
    margin-bottom: 8px;
  }
  .mb-md-12 {
    margin-bottom: 12px;
  }
  .mb-md-16 {
    margin-bottom: 16px;
  }
  .mb-md-24 {
    margin-bottom: 24px;
  }
  .mb-md-32 {
    margin-bottom: 32px;
  }
  .mx-md-12 {
    margin-left: 12px;
    margin-right: 12px;
  }
  .me-md-16 {
    margin-right: 16px;
  }

  .pb-md-4 {
    padding-bottom: 4px;
  }
  .pb-md-32 {
    padding-bottom: 32px;
  }
  .py-md-12 {
    padding-top: 12px;
    padding-bottom: 12px;
  }
  .py-md-16 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
  .py-md-24 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
  .py-md-32 {
    padding-top: 32px;
    padding-bottom: 32px;
  }
  .py-md-40 {
    padding-top: 40px;
    padding-bottom: 40px;
  }
  .p-md-24 {
    padding: 24px;
  }
}

// fonts

.text-center {
  text-align: center;
}

.text-neutral-0 {
  color: $neutral-0;
}
.text-neutral-500 {
  color: $neutral-500;
}
.text-primary-300 {
  color: $primary-300;
}
.text-primary-400 {
  color: $primary-400;
}

.display-1 {
  font-size: 64px;
}
.display-2 {
  font-size: 48px;
}
.h1 {
  font-size: 40px;
}
.h2 {
  font-size: 32px;
}
.h3 {
  font-size: 28px;
}
.h4 {
  font-size: 24px;
}
.h5 {
  font-size: 20px;
}
@include breakpoint-md {
  .text-md-start {
    text-align: left;
  }
  .display-md-2 {
    font-size: 48px;
  }
  .h2-md {
    font-size: 32px;
  }
  .h3-md {
    font-size: 28px;
  }
  .h4-md {
    font-size: 24px;
  }
  .h5-md {
    font-size: 20px;
  }
  .h6-md {
    font-size: 16px;
  }
}

.bg-primary-100 {
  background-color: $primary-100;
}
.bg-primary-200 {
  background-color: $primary-200;
}

// border

.radius-4 {
  border-radius: 4px;
}

// universal

.position-relative {
  position: relative;
}
.position-absolute {
  position: absolute;
}

.zindex-1 {
  z-index: 1;
}

.btn {
  background-color: transparent;
  border: none;
  border-radius: 4px;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.05em;
  cursor: pointer;
  font-family:
    'Noto Sans TC',
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    'Microsoft JhengHei',
    'Roboto',
    'Helvetica Neue',
    Arial,
    sans-serif;

  transition-duration: $duration;
}

.btn-large {
  padding: 12px 24px;
}
.btn-md-medium {
  @include breakpoint-md {
    padding: 8px 16px;
  }
}

.btn-dark {
  background-color: $neutral-900;
  color: $neutral-0;

  &:hover {
    background-color: $neutral-700;
  }
}
.btn-primary {
  background-color: $primary-300;
  color: $neutral-900;

  @include hover-color($primary-500);
}

.nav-item {
  padding-top: 8px;
  padding-bottom: 8px;

  &:not(:last-child) {
    margin-bottom: 16px;
  }
}

// effects

.icon-btn {
  @include hover-color($primary-400);
}

.nav-link {
  @include hover-color($neutral-600);

  &-neutral {
    @include hover-color($neutral-600);
  }

  &-primary {
    @include hover-color($primary-500);
  }

  &.active {
    color: $primary-400;
  }
}

